# rpc

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Config.h.in  Dockerfile  README.md
compiler/: CMakeLists.txt  CSGenerator.cpp  Compiler.cpp  Compiler.h  CppGenerator.cpp  Definition.h  ERLGenerator.cpp  Enum.h  Field.h  GoGenerator.cpp  GoGenerator.h  Main.cpp  PYGenerator.cpp  Service.h  Struct.h  rpc.l
conn/src/: BINChannel.h  BINChannelBroadcaster.h  BINChannelConnection.h  BINConnection.h  CMakeLists.txt  Channel.h  ChannelBroadcaster.h  ChannelConnection.cpp  ChannelConnection.h  Connection.cpp  Connection.h
runtime/cpp/: Common.h  EnumInfo.h  FieldMask.h  JsonHelper.h  ProtocolBytesReader.h  ProtocolBytesWriter.h  ProtocolMemReader.h  ProtocolMemWriter.h  ProtocolReader.h  ProtocolWriter.h
runtime/cs/: FieldMask.cs  IReader.cs  IWriter.cs  MemReader.cs  MemWriter.cs  ProtocolReader.cs  ProtocolWriter.cs
runtime/go/: crosslang_test.go  enuminfo.go  errors.go  fieldmask.go  fieldmask_test.go  go.mod  protocol.go  reader.go  reader_test.go  roundtrip_test.go  writer.go  writer_test.go
runtime/py/: setup.py.in
scripts/: docker-build-windows.ps1  docker-build-windows.sh  docker-build.ps1  docker-build.sh  docker-test-windows.ps1  docker-test-windows.sh  docker-test.ps1  docker-test.sh
tests/: CMakeLists.txt  bug_fix_protocol_compat.md  cpp_serialization_check.cpp  csharp_cpp_interop_summary.md  csharp_serialization_check.cs  tests_config.h.in  version_compat_simple.cpp  version_compatibility_test.cpp
tests/cmake/: generate_config.cmake
tests/cs/: CrossLangVerifier.cs  CrossLangVerifier.csproj  FullCrossLangVerifier.cs  FullCrossLangVerifier.csproj  TestMemReader.cs  TestMemWriter.cs
tests/runtime/: compiler_test.cpp  cpp_serialization_memory_test.cpp  cross_lang_file_test.cpp  full_cross_lang_test.cpp  full_schema_test.cpp  json_test.cpp  service_test.cpp
tests/schema/: CrossLangTest.rpc  FullCrossLang.rpc  FullTest.rpc
tests/scripts/: run_cs_verifier.sh
